# NativeDemo

app/: build.gradle
app/src/androidTest/java/launcher/uvdemo/app/: ExampleInstrumentationTest.java
app/src/androidTest/java/launcher/uvdemo/myapplication/: ExampleInstrumentationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/launcher/uvdemo/app/: MainActivity.java  MyGLView.java  MyLib.java
app/src/main/java/launcher/uvdemo/myapplication/: MainActivity.java  MyLib.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/launcher/uvdemo/app/: ExampleUnitTest.java
app/src/test/java/launcher/uvdemo/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myLib/: CMakeLists.txt  Callstack.cpp  Callstack.h  mylib.cpp
